<resources>
    <string name="app_name">Era-feriao</string>
    <string name="title_activity_feriado_mas_cercano">FeriadoMasCercano</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="api_error">Hay un error con el recurso de la api</string>
    <string name="wordName">Nombre</string>
    <string name="wordComments">Comentarios</string>
    <string name="wordDate">Fecha</string>
    <string name="wordInalienable">Irrenunciable</string>
    <string name="wordType">Tipo</string>
    <string name="wordLaws">Leyes</string>
    <string name="wordLawsURL">URL de las Leyes</string>
    <string name="wordYes">Sí</string>
    <string name="wordNo">No</string>

    <string name="StrgAbout">About</string>
    <string name="StrgFAQ">FAQ</string>
    <string name="StrgFeriadoCercano">Proximos Feriados</string>
    <string name="StrgFiltro">Filtro</string>
    <string name="StrgMain">Era Feriado</string>
    <string name="textAbout">Este proyecto fue creado por tres estudiantes de ingenieria
    en desarrollo de videojuegos y realidad virtual. \n\n
        Maivomi -  Pedro Videla  -  Luis Otarola\n\n\n
    Agradecimientos a Api: Feriados legales de Chile por la informacion.\n\n
        link: https://apis.digital.gob.cl/fl/
    </string>

    <!--Precuntas y respuestas del FAQ-->
    <string name="StrgPregunta1">1. ¿Los feriados cambian cada año?</string>
    <string name="StrgPregunta2">2. ¿Como puedo saber si un dia cae feriado?</string>
    <string name="StrgPregunta3">3. ¿Que muestra el cronometro?</string>
    <string name="StrgRespuesta1">R: Generalmente no varian, pero hay conmemoraciones especificas
        que se celebran en un dia de la semana en particular y estas si cambian de fecha, como;
        Viernes Santos o Dia de las Glorias Navales los lunes.</string>
    <string name="StrgRespuesta2">R: Puedes consultar en el filtro con la fecha exacta(año, mes, dia), la cual te
        mostrara el feriado y en caso de no ser feriado, no te nada.</string>
    <string name="StrgRespuesta3">R: El cronometro muestra exactamente cuando tiempo en horas, minutos y segundos
    faltan para el feriado mas cercano a las 00:00 horas.</string>

    <string name="StrgMainDetailHoliday">Aqui va la iformacion del dia feriado</string>

</resources>