<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/feriadoDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wordDate"
            android:textColor="@color/buttonPressed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/feriadoNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordName"
            android:textColor="@color/white"
            tools:text="@string/wordName" />

        <TextView
            android:id="@+id/feriadoCommentsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordComments"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoInalienableTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordInalienable"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoTypeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordType"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoLawsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordLaws"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoLawsUrlTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordLawsURL"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>