<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeriadoMasCercano">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lighpurple"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="dp" />

    <View
        android:id="@+id/barFeriadoCercanoRadius"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_buttom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/barraAux"
        app:layout_constraintBottom_toBottomOf="@+id/barFeriadoCercanoRadius"
        app:layout_constraintEnd_toEndOf="@+id/barFeriadoCercanoRadius"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/barFeriadoCercanoRadius"
        app:layout_constraintTop_toTopOf="@+id/barFeriadoCercanoRadius"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/title_feriadoCercano"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/StrgFeriadoCercano"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/barFeriadoCercanoRadius"
        app:layout_constraintEnd_toEndOf="@+id/barFeriadoCercanoRadius"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/barFeriadoCercanoRadius"
        app:layout_constraintTop_toTopOf="@+id/barFeriadoCercanoRadius" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="201dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399">

        <TextView
            android:id="@+id/feriadoNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordName"
            android:textColor="@color/white"
            tools:text="@string/wordName" />

        <TextView
            android:id="@+id/feriadoCommentsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordComments"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordDate"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoInalienableTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordInalienable"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoTypeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordType"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoLawsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordLaws"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/feriadoLawsUrlTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordLawsURL"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>