<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:backgroundTint="@color/lighpurple"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/barraAux"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="536dp"
        android:background="@drawable/custom_buttom"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="textEnd"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.122"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textCronometro"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.095" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="305dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.725">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFiltro"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_buttom"
                android:text="@string/StrgFiltro"
                android:textSize="24sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/buttonFeriadoCercano"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_buttom"
                android:text="@string/StrgFeriadoCercano"
                android:textSize="24sp"
                app:backgroundTint="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFAQ"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_buttom"
                android:text="@string/StrgFAQ"
                android:textSize="24sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_buttom"
                android:text="@string/StrgAbout"
                android:textSize="24sp"
                app:backgroundTint="@null" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="392dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_buttom"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:layout_width="392dp"
        android:layout_height="33dp"
        android:background="@color/barraAux"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>